# SpaceGame

./: README.md  main.cpp
RegularGame/: CMakeLists.txt
RegularGame/include/: Bullet.h  Game.h  Menu.h
RegularGame/src/: Game.cpp  Menu.cpp  Player.cpp
include/: Enemy.h  GameObject.h  ObjectConstructor.h  Player.h  Window.h
src/: Bullet.cpp  Enemy.cpp  Menu.cpp  ObjectConstructor.cpp  Window.cpp
